# benchmarks

./: .gitignore  .gitmodules  DEPLOYMENT.md  README.md  SUMMARY.md  TODO.md  go.mod  quickstart.sh
.github/workflows/: ci-benchmark.yml  ci.yml
api/: README.md
api/go-fasthttp/: go.mod  main.go
api/go-http/: main.go
api/grpc/go-grpc/: README.md  go.mod  main.go
api/grpc/go-grpc/proto/: helloworld.proto
api/java-springboot/: pom.xml
api/java-springboot/src/main/java/com/benchmark/helloworld/: HelloWorldApplication.java
api/java-springboot/src/main/resources/: application.properties
api/nginx-static/: nginx.conf
api/node-express/: index.js  package.json
api/node-fastify/: index.js  package.json
api/node-http/: index.js  package.json
api/python-fastapi/: main.py  pyproject.toml
api/python-flask/: main.py  pyproject.toml  requirements.txt
api/rust-axum/: Cargo.toml
api/rust-axum/src/: main.rs
cli/: rectangle.js  rectangle.py  rectangle.ts
cli/cpp/: CMakeLists.txt
cli/go/: go.mod  rectangle.go
cli/java/: Rectangle.java
cli/node/: package.json  rectangle.js  rectangle.ts
cli/python/: pyproject.toml
cli/rust/: Cargo.toml  rectangle.rs
cmd/benchrunner/: main.go
compute/: bubblesort  bubblesort.py  bubblesort.ts
compute/go/: bubblesort.go  go.mod
compute/node/: package.json
compute/rust/: bubblesort.rs
ffi/: BenchJava.java  README.md  bench_go.go  bench_go_cgo.go  bench_native.cpp  bench_node.ts  bench_python.py  bench_rust.rs  bench_zig.zig  build.bat  build.sh  hotpath.i
ffi/fast_sum/: hotpath.h
ffi/fast_sum/cpp/: main.cpp
ffi/fast_sum/go/: main.go
ffi/fast_sum/python/: main.py
ffi/fast_sum/rust/: main.rs
ffi/fast_sum/zig/: main.zig
ffi/slow_compute/: hotpath.cpp
ffi/slow_compute/cpp/: main.cpp
ffi/slow_compute/go/: main.go
ffi/slow_compute/python/: main.py
ffi/slow_compute/rust/: main.rs
ffi/slow_compute/zig/: main.zig
helloworld/: benchmark.md
helloworld/c/: CMakeLists.txt  Makefile
helloworld/cpp/: CMakeLists.txt  Makefile
helloworld/go/: Makefile
helloworld/java/: Makefile
helloworld/node/: package.json
helloworld/rust/: Cargo.toml  Makefile
helloworld/zig/: Makefile  build.zig
internal/benchmark/: benchmark.go
internal/builder/: builder.go
internal/config/: config.go
internal/server/: server.go
serialization/: .gitignore  Cargo.toml  README.md  build.rs
serialization/benches/: serialization_bench.rs
serialization/proto/: benchmark.avsc  benchmark.capnp  benchmark.proto
serialization/src/: lib.rs  main.rs
startup/: README.md  go.mod  package.json
startup/compute/: bubblesort.js  bubblesort.rs  bubblesort.ts  bubblesort.zig
startup/memory/: Cargo.toml  rectangle.zig  test_rectangle.yaml
startup/memory/cpp/: main.cpp
