[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-api-bench"
version = "0.1.0"
description = "A simple FastAPI application for performance benchmarking"
authors = [
    {name = "Napolitain", email = "napolitain@example.com"},
]
requires-python = ">=3.8"
keywords = ["fastapi", "uvicorn", "benchmarking"]

# Dependencies for the application to run
dependencies = [
    "fastapi==0.104.1",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
# Dependencies needed for development, testing, and running (like Uvicorn)
dev = [
    "uvicorn[standard]==0.24.0",
]

# This is often used to hold the main dependencies for running the server
server = [
    "uvicorn[standard]==0.24.0",
    "uvloop>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
