[package]
name = "rectangle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rectangle"
path = "rectangle.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
